Add script.js, three images to How to find trails folder.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title><h1>Somerset Trails</h1></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--JQuery-->
+	<link rel="stylesheet" href="">
+	<!---->
+	<link rel="stylesheet" href="">
+	<!---->
+	<link href="assets/css/style.css" rel="stylesheet">
+	<title>
+		<h1>Somerset Trails</h1>
+	</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/css/images/favicon/favicon-32x32.png">
+	<link
+		href="https://raw.githubusercontent.com/michodgs24/1-health/master/assets/css/images/favicon/favicon-16x16.png"
+		rel="#">
 </head>
-<body></body>
+
+<body>
+</body>
+<script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+	crossorigin="anonymous"></script>
 
 </html>
