--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--JQuery-->
+    <!---->
 	<link rel="stylesheet" href="">
 	<!---->
 	<link rel="stylesheet" href="">
-	<!---->
+	<!--css-->
 	<link href="assets/css/style.css" rel="stylesheet">
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc"></script>
+
 	<title>
 		<h1>Somerset Trails</h1>
 	</title>
@@ -21,7 +24,4 @@
 
 <body>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
-	crossorigin="anonymous"></script>
-
 </html>
