--- a/index.html
+++ b/index.html
@@ -5,100 +5,134 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!---->
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="#">
 	<!---->
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<!--css-->
 	<link href="assets/css/style.css" rel="stylesheet">
-	<!--JQuery-->
-	<script src="https://code.jquery.com/jquery-3.5.0.js"
-		integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc"></script>
 
-	<title>
-		Somerset Trails
-	</title>
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/css/images/favicon/favicon-32x32.png">
-	<link
-		href="https://raw.githubusercontent.com/michodgs24/1-health/master/assets/css/images/favicon/favicon-16x16.png"
-		rel="#">
+	<title>Somerset Trails</title>
+
+	<!--Favicon 32x32-->
+	<link rel="icon" type="image/png" sizes="32x32" href="#">
+	<!--Favicon 16x16-->
+	<link href="#" rel="#">
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
+
+	<!--Navigation, fixed at the top of page for ease of use.-->
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Dropdown link
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Dropdown link
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
 	<h1>Somerset Trails</h1>
-    <p>Milestone Project 2</p>
-        <article class="container">
-        <!-- Callout -->
-        <div class="row">
-            <div class="col-12">
-                <section class="callout">
-                    <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. <s>€19.99</s> <strong><mark>First one is free!</mark></strong></p>
-                    <p><button class="btn btn-lg btn-success">Sign Up!</button></p>
-                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly.</small></p>
-                </section>
-            </div>
-        </div>
-        <!-- /.callout -->
-        <hr>
+	<p>Milestone Project 2</p>
+	<article class="container">
+    <h2>#</h2>
+		<div class="row">
+			<div class="col-12">
+				<section class="">
+					<h1>#</h1>
+					<p>#</p>
+					<p></p>
+					<p>#</p>
+				</section>
+			</div>
+		</div>
 
-        <!-- Quotes -->
-        <section class="quotes">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-uppercase">Quotes:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                        <footer class="blockquote-footer">Jane Doe on <cite title="Twitter">Twitter</cite></footer>
-                    </blockquote>
-                </div>
-                <div class="col-12 col-md-6">
-                    <blockquote class="blockquote">
-                        <p>I haven't been sober for months!</p>
-                        <footer class="blockquote-footer">Jane Doe on <cite title="Twitter">Twitter</cite></footer>
-                    </blockquote>
-                </div>
-            </div>
-        </section>
-        <!-- /.quotes -->
-        <hr>
-
-        <!-- Features -->
-        <section class="features">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3>Feature 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3>Feature 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3>Feature 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- /.features -->
-    </article>
+		<section>
+			<h2>#</h2>
+			<div class="container">
+				<div class="row justify-content-start">
+					<div class="col-4">
+						One of two columns
+					</div>
+					<div class="col-4">
+						One of two columns
+					</div>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-4">
+						One of two columns
+					</div>
+					<div class="col-4">
+						One of two columns
+					</div>
+				</div>
+				<div class="row justify-content-end">
+					<div class="col-4">
+						One of two columns
+					</div>
+					<div class="col-4">
+						One of two columns
+					</div>
+				</div>
+				<div class="row justify-content-around">
+					<div class="col-4">
+						One of two columns
+					</div>
+					<div class="col-4">
+						One of two columns
+					</div>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-4">
+						One of two columns
+					</div>
+					<div class="col-4">
+						One of two columns
+					</div>
+				</div>
+			</div>
+		</section>
+	</article>
 </body>
+<!--Jquery library-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+</script>
+<!--Bootstrap library-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+</script>
 
 </html>
