Add site logo to navigation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
+		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+		<a class="navbar-brand" href="#">Nav Trail</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,7 +37,7 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Dropdown link
+						Top Trails
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						<a class="dropdown-item" href="#">Action</a>
@@ -47,7 +48,7 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false">
-						Dropdown link
+						Trail History
 					</a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="#">Action</a>
@@ -66,7 +67,7 @@
 		<div class="row">
 			<div class="col-12">
 				<section class="">
-					<h1>#</h1>
+					<h2>#</h2>
 					<p>#</p>
 					<p></p>
 					<p>#</p>
@@ -120,14 +121,15 @@
 			</div>
 		</section>
 	</article>
+
+	<!--Jquery library-->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+	</script>
+	<!--Bootstrap library-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+	</script>
 </body>
-<!--Jquery library-->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-</script>
-<!--Bootstrap library-->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-</script>
 
 </html>
