--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+    
+    <!--logo-->
+    <img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 		<a class="navbar-brand" href="#">Nav Trail</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
