--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     
     <!--logo-->
     <img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-		<a class="navbar-brand" href="#">Nav Trail</a>
+		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 		<div class="collapse navbar-collapse" id="navbarNavDropdown">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -62,10 +62,19 @@
 		</div>
 	</nav>
 
-	<h1>Somerset Trails</h1>
-	<p>Milestone Project 2</p>
-	<article class="container">
+<!--Cover text and cover picture.-->
+
+<section class="container"> 
+ <div>
+	<h1><strong>Somerset Trails</strong></h1>
+	<p>Explore some of the most beautiful countryside in Great Britain one step at a time</p>
+ </div>
+</section>
+	
+    
+    <article class="container">
 		<h2>#</h2>
+        <div>
 		<div class="row">
 			<div class="col-12">
 				<section class="">
