--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    
-    <!--logo-->
-    <img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+
+		<!--logo-->
+		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -62,19 +62,18 @@
 		</div>
 	</nav>
 
-<!--Cover text and cover picture.-->
+	<!--Cover text and cover picture.-->
 
-<section class="container"> 
- <div>
-	<h1><strong>Somerset Trails</strong></h1>
-	<p>Explore some of the most beautiful countryside in Great Britain one step at a time</p>
- </div>
-</section>
-	
-    
-    <article class="container">
+	<div class="banner">
+		<div class="layer banner_background_layer-one scroll-bg">
+			<h1><strong>Somerset Trails</strong></h1>
+			<p>Explore some of the most beautiful countryside in Great Britain one step at a time</p>
+		</div>
+	</div>
+
+
+	<section class="container">
 		<h2>#</h2>
-        <div>
 		<div class="row">
 			<div class="col-12">
 				<section class="">
@@ -131,16 +130,16 @@
 				</div>
 			</div>
 		</section>
-	</article>
+		</article>
 
-	<!--Jquery library-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-	</script>
-	<!--Bootstrap library-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-	</script>
+		<!--Jquery library-->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+		</script>
+		<!--Bootstrap library-->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+		</script>
 </body>
 
 </html>
