--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
+<header>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
 		<!--logo-->
@@ -61,18 +62,23 @@
 			</ul>
 		</div>
 	</nav>
+</header>
 
 	<!--Cover text and cover picture.-->
 
-	<div class="banner">
-		<div class="layer banner_background_layer-one scroll-bg">
-			<h1><strong>Somerset Trails</strong></h1>
-			<p>Explore some of the most beautiful countryside in Great Britain one step at a time</p>
+<section class="banner">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-md-6 offset-md-3">
+					<h2 class="text-center image-text-all">Somerset Trails</h2>
+                    <p class="text-center image-text-all">Explore the best trails Somerset has to offer, one step at a time</p>
+				</div>
+			</div>
 		</div>
-	</div>
+	</section>
 
 
-	<section class="container">
+	<!--<section class="container">
 		<h2>#</h2>
 		<div class="row">
 			<div class="col-12">
@@ -129,17 +135,16 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		</article>
+		</section>-->
 
-		<!--Jquery library-->
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-		</script>
-		<!--Bootstrap library-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-		</script>
+	<!--Jquery library-->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+	</script>
+	<!--Bootstrap library-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+	</script>
 </body>
 
 </html>
