--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-12 col-md-6 offset-md-3">
-					<h2 class="text-center image-text-all">Somerset Trails</h2>
-                    <p class="text-center image-text-all">Explore the best trails Somerset has to offer, one step at a time</p>
+					<h2>Somerset Trails</h2>
+                    <p>Explore the best trails Somerset has to offer, one step at a time</p>
 				</div>
 			</div>
 		</div>
