Add styling to banner text

--- a/index.html
+++ b/index.html
@@ -69,36 +69,30 @@
 	<section class="banner">
 		<div id="banner-outer">
 			<div class="container-fluid">
-				<div class="row">
-					<div class="col-sm-12 col-md-6 offset-md-3">
-						<h2>Somerset Trails</h2>
-						<p>Explore the best trails Somerset has to offer, one step at a time</p>
-					</div>
+				<div class="col-sm-12 col-md-6 offset-md-3">
+					<h2 class="banner-text"><strong>Somerset Trails</strong></h2>
+					<p>Explore the best trails Somerset has to offer, one step at a time</p>
 				</div>
 			</div>
 		</div>
 	</section>
 
 
-	<!--<section class="container">
-		<h2>#</h2>
-		<div class="row">
-			<div class="col-12">
-				<section class="">
-					<h2>#</h2>
-					<p>#</p>
-					<p></p>
-					<p>#</p>
-				</section>
+	<section>
+			<div class="Introduction">
+				<h2>Introduction to Trails</h2>
+					<section>
+						<p></p>
+					</section>
+				</div>
 			</div>
-		</div>
 
 		<section>
 			<h2>#</h2>
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row justify-content-start">
 					<div class="col-4">
-						One of two columns
+						<p></p>
 					</div>
 					<div class="col-4">
 						One of two columns
@@ -139,14 +133,14 @@
 			</div>
 		</section>-->
 
-	<!--Jquery library-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-	</script>
-	<!--Bootstrap library-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
-	</script>
+		<!--Jquery library-->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+		</script>
+		<!--Bootstrap library-->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+		</script>
 </body>
 
 </html>
