Add slideshow pictures to index.html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
-	<header>
+	<!--<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-			<!--logo-->
+			<!--logo
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
 		</nav>
 	</header>
 
-	<!--Cover text and cover picture.-->
+	<!--Cover text and cover picture.
 
 	<section class="banner">
 		<div id="banner-outer">
@@ -100,21 +100,33 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="numbertext">1 / 5</div>
+    <img class="slideshow-img" src="..images/slideshow/cheddar-gorge-img.jpg" alt="Cheddar Gorge">
+    <div class="text">Cheddar Gorge</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <div class="numbertext">2 / 5</div>
+    <img class="slideshow-img" src="..images/slideshow/blagdon-lake-img.jpg" alt="Blagdon Lake">
+    <div class="text">Blagdon Lake</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <div class="numbertext">3 / 5</div>
+    <img class="slideshow-img" src="..images/slideshow/cleeve-hill-img.jpg" alt="Cleeve hill">
+    <div class="text">Cleeve Hill</div>
+  </div>
+
+ <div class="mySlides fade">
+    <div class="numbertext">4 / 5</div>
+    <img class="slideshow-img" src="..images/slideshow/west-somerset-coastal-path-img.jpg" alt="West Somerset Coastal Path">
+    <div class="text">West Somerset Coastal Path</div>
+  </div>
+
+   <div class="mySlides fade">
+    <div class="numbertext">5 / 5</div>
+    <img class="slideshow-img" src="..images/slideshow/weston-woods-img.jpg" alt="Weston Woods">
+    <div class="text">Weston Woods</div>
   </div>
 
   <!-- Next and previous buttons -->
