Add navigation bar and updated document function in myscript.js

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
-	<!--<header>
+	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-			<!--logo
+			<!--logo-->
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
 							Top Trails
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
 							<a class="dropdown-item" href="#">Another action</a>
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
@@ -64,7 +64,7 @@
 		</nav>
 	</header>
 
-	<!--Cover text and cover picture.
+	<!--Cover text and cover picture.-->
 
 	<section class="banner">
 		<div id="banner-outer">
