--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -20,9 +20,51 @@
 </head>
 
 <body>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+			<!--logo-->
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+			<a class="navbar-brand" href="#"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Top Trails
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">
+							Trail History
+						</a>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+
+
 	<section>
 		<h2><strong>Cheddar gorge street view</strong></h2>
-		<iframe src="https://www.google.com/maps/embed/v1/streetview" ?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8
+		<iframe src="https://www.google.com/maps/embed/v1/streetview" ?key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
 			&location=46.414382,10.013988 &heading=210 &pitch=10 &fov=35><iframe>
 	</section>
 
