--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -19,7 +19,10 @@
 	<link href="#" rel="#">
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
+
+<!--Navigation, fixed at the top of page for ease of use.-->
+	
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -65,7 +68,7 @@
 	<section>
 		<h2><strong>Cheddar gorge street view</strong></h2>
 		<iframe src="https://www.google.com/maps/embed/v1/streetview" ?key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
-			&location=46.414382,10.013988 &heading=210 &pitch=10 &fov=35><iframe>
+		location="51.2880522,-2.7575527" heading="210" pitch="10" fov="35"><iframe>
 	</section>
 
 	<footer>
