--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
 			</p>
 		</div>
 	</section>
-    
-    
-<!--Slideshow section -->
+
+
+	<!--Slideshow section -->
 
 
 
 
-<!--Footer section-->
+	<!--Footer section-->
 
-<footer>
-</footer>
+	<footer>
+	</footer>
 
-<script type="text/javascript" src="js/myscript.js"></script>
+	<script src="js/myscript.js"></script>
 
 	<!--Jquery library-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
