Add google maps scripts to html document.

--- a/index.html
+++ b/index.html
@@ -104,16 +104,26 @@
 	<footer>
 	</footer>
 
-	<script src="js/myscript.js"></script>
+	<!--Scripts-->
 
-	<!--Jquery library-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
-	</script>
+	<!--Jquery-->
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+	<!--Popper-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
 	<!--Bootstrap library-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+	<!--Maps JS-->
+	<script src="assets/js/maps.js"></script>
+
+	<!--Google maps scripts-->
+	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
 	</script>
+
+
 </body>
 
 </html>
