Remove API key, prevent security breaches

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 	<!--Google maps scripts-->
 	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
+	<script src="https://maps.googleapis.com/maps/api/js?key=......&callback=initMap">
 	</script>
 
 
