--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -76,9 +76,7 @@
 	<footer>
 	</footer>
 	<!--Map-->
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap&language=ja&region=JP"
-		async defer>
+	<script>
 	</script>
 
 	<!--Scripts-->
