Add slideshow section plus heading and images

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -64,6 +64,12 @@
 		</nav>
 	</header>
 
+	<section>
+		<div>
+			<h2>Cheddar Gorge Gallery</h2>
+		</div>
+	</section>
+
 
 	<!--<section class="cheddar-map">
     <div
@@ -75,7 +81,7 @@
 
 	<footer>
 	</footer>
-	<!--Map-->
+
 	<script>
 	</script>
 
