--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
 	<!--Slideshow section -->
 
 
+	<section>
+		<div>
+			<h2>Somerset Trails Gallery</h2>
+            <img class="home-slides" src="../images/slideshow/home-slide/blagdon-lake-img.jpg" alt="Blagdon Lake">
+            <img class="home-slides" src="../images/slideshow/home-slide/cheddar-gorge-img.jpg" alt="Cheddar Gorge">
+            <img class="home-slides" src="../images/slideshow/home-slide/cleeve-hill-img.jpg" alt="Cleeve Hill">
+            <img class="home-slides" src="../images/slideshow/home-slide/west-somerset-coastal-path-img.jpg" alt="West Somerset">
+            <img class="home-slides" src="../images/slideshow/home-slide/weston-woods-img.jpg" alt="Weston Woods">
+		</div>
+	</section>
 
 
 	<!--Footer section-->
