--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!---->
-	<link rel="stylesheet" href="#">
+	<!--WS3 Css-->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<!--bootstrap-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<!--css-->
@@ -26,7 +26,8 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-			<!--logo-->
+			<!--logo part of menu bar, for better site layout-->
+
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,8 +36,14 @@
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
+
+                    <!--homepage tab, for user accessibility-->
+
 						<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
 					</li>
+
+                    <!--Dropdown tab, all trails in one place for user accessibility-->
+
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -44,17 +51,6 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">
-							Trail History
-						</a>
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="#">Action</a>
 							<a class="dropdown-item" href="#">Another action</a>
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
