Update banner cover text styling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div id="banner-outer">
 			<div class="container-fluid">
 				<div class="col-sm-12 col-md-6 offset-md-3">
-					<h2 class="banner-text"><strong>Somerset Trails</strong></h2>
+					<h2><strong>Somerset Trails</strong></h2>
 					<p>Explore the best trails Somerset has to offer, one step at a time</p>
 				</div>
 			</div>
