Edit banner text styling

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
 
 <body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
 
-	<!--Navigation, fixed at the top of page for ease of use.-->
+	<!--Navigation, fixed at the top of page for ease of use-->
 
-	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+            
+            <!--logo part of menu bar, for better site layout-->
 
-			<!--logo part of menu bar, for better site layout-->
-			
-            <img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -55,17 +54,14 @@
 				</ul>
 			</div>
 		</nav>
-	</header>
 
 	<!--Cover text and cover picture.-->
 
 	<section class="banner">
 		<div id="banner-outer">
-			<div class="container-fluid">
-				<div class="col-sm-12 col-md-6 offset-md-3">
+			<div class="container">
 					<h2>Explore the best trails one step at a time</h2>
 				</div>
-			</div>
 		</div>
 	</section>
 
