Edit rgb color and size of banner text

--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
 	<section class="banner">
 		<div id="banner-outer">
 			<div class="container">
-					<h2>Explore the best trails one step at a time</h2>
+					<h6><strong>Explore the best trails one step at a time</strong></h6>
 				</div>
 		</div>
 	</section>
 
 
 	<section>
+    <div class="container">
 		<div id="Introduction">
-			<h2>Introduction to Trails</h2>
+			<h2><strong>Introduction to Trails</strong></h2>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 				Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
 				took a galley of type and scrambled it to make a type specimen book.
@@ -78,6 +79,7 @@
 				and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
 				Ipsum.
 			</p>
+		</div>
 		</div>
 	</section>
 
