Add favicon icon links to head

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<title>Somerset Trails</title>
 
 	<!--Favicon 32x32-->
-	<link rel="icon" type="image/png" sizes="32x32" href="#">
+	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
 	<!--Favicon 16x16-->
-	<link href="#" rel="#">
+	<link href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png" rel="#">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
