--- a/index.html
+++ b/index.html
@@ -16,88 +16,95 @@
 	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
 	<!--Favicon 16x16-->
-	<link href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png" rel="#">
+	<link
+		href="https://raw.githubusercontent.com/michodgs24/Somerset-Trails/master/assets/css/images/favicon/favicon-16x16.png"
+		rel="#">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
 
 	<!--Navigation, fixed at the top of page for ease of use-->
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-            
-            <!--logo part of menu bar, for better site layout-->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 
-			<a class="navbar-brand" href="#"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<!--logo part of menu bar, for better site layout-->
+
+		<a class="navbar-brand" href="#"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
-					</li>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
+				</li>
 
-                    <!--Dropdown tab, all trails in one place for user accessibility-->
+				<!--Dropdown tab, all trails in one place for user accessibility-->
 
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Top Trails
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</nav>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Top Trails
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
 
 	<!--Cover text and cover picture.-->
 
 	<section class="banner">
 		<div id="banner-outer">
 			<div class="container">
-					<h6><strong>Explore the best trails one step at a time</strong></h6>
-				</div>
+				<h6><strong>Explore the best trails one step at a time</strong></h6>
+			</div>
 		</div>
 	</section>
 
 
 	<section>
-    <div class="container">
-		<div id="Introduction">
-			<h2><strong>Introduction to Trails</strong></h2>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-				Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-				took a galley of type and scrambled it to make a type specimen book.
-				It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-				essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-				Lorem Ipsum passages,
-				and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-				Ipsum.
-			</p>
-		</div>
+		<div class="container">
+			<div id="introduction">
+				<h2><strong>Trails</strong></h2>
+				<br>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+					printer
+					took a galley of type and scrambled it to make a type specimen book.
+					It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+					essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+					containing
+					Lorem Ipsum passages,
+					and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+					Ipsum.
+				</p>
+			</div>
 		</div>
 	</section>
 
+	<br>
 
 	<!--Slideshow section -->
 
 
-	<section>
-    <h2 class="w3-center">Somerset Trails Gallery</h2>
+	<section class="slide">
+		<h2 class="w3-center">Home Gallery</h2>
+        <br>
 		<div class="w3-content w3-display-container">
-            <img class="home-slides" src="https://d70af523-21f0-4f56-8010-1f2606bfc299.ws-eu01.gitpod.io/mini-browser/workspace/Somerset-Trails/assets/images/slideshow/home-slide/blagdon-lake-img.jpg" alt="Blagdon Lake">
-            <img class="home-slides" src="https://d70af523-21f0-4f56-8010-1f2606bfc299.ws-eu01.gitpod.io/mini-browser/workspace/Somerset-Trails/assets/images/slideshow/home-slide/cheddar-gorge-img.jpg" alt="Cheddar Gorge">
-            <img class="home-slides" src="https://d70af523-21f0-4f56-8010-1f2606bfc299.ws-eu01.gitpod.io/mini-browser/workspace/Somerset-Trails/assets/images/slideshow/home-slide/cleeve-hill-img.jpg" alt="Cleeve Hill">
-            <img class="home-slides" src="https://d70af523-21f0-4f56-8010-1f2606bfc299.ws-eu01.gitpod.io/mini-browser/workspace/Somerset-Trails/assets/images/slideshow/home-slide/west-somerset-coastal-path-img.jpg" alt="West Somerset Coastal Path">
-            <img class="home-slides" src="https://d70af523-21f0-4f56-8010-1f2606bfc299.ws-eu01.gitpod.io/mini-browser/workspace/Somerset-Trails/assets/images/slideshow/home-slide/weston-woods-img.jpg" alt="Weston Woods">
-            <Br>
-            <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-            <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+			<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Blagdonlake2.jpg" alt="Blagdon Lake">
+			<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Cheddar_Gorge%2C_Somerset%2C_UK_-_Diliff.jpg" alt="Cheddar Gorge">
+			<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/f/fc/View_from_Cleeve_Hill_-_geograph.org.uk_-_299073.jpg" alt="Cleeve Hill">
+			<img class="card" src="https://s0.geograph.org.uk/geophotos/05/45/08/5450898_08a5436b.jpg" alt="West Somerset Coastal Path">
+			<img class="card" src="https://live.staticflickr.com/5828/20565424828_7f416be21d_b.jpg" alt="Weston Woods">
+			<Br>
+			<button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+			<button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
 		</div>
 	</section>
 
@@ -121,8 +128,8 @@
 	<!--Maps JS-->
 	<script src="assets/js/maps.js"></script>
 
-    <!--Slideshow JS-->
-    <script src="assets/js/slide.js"></script>
+	<!--Slideshow JS-->
+	<script src="assets/js/slide.js"></script>
 
 	<!--Google maps scripts-->
 	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
