--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<!--Navigation, fixed at the top of page for ease of use-->
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 
 		<!--logo part of menu bar, for better site layout-->
@@ -33,7 +33,7 @@
 		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+    </button>
 		<div class="collapse navbar-collapse" id="navbarNavDropdown">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
@@ -56,6 +56,7 @@
 			</ul>
 		</div>
 	</nav>
+
 
 	<!--Cover text and cover picture.-->
 
