Change html file path, add new files to navigation

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -25,7 +25,6 @@
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
-	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed top">
 
 			<!--logo part of menu bar, for better site layout-->
@@ -52,15 +51,16 @@
 							Top Trails
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
+                        <a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
+						<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
+                        <a class="dropdown-item" href="weston.html">Weston Woods</a>
+                        <a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
 						</div>
 					</li>
 				</ul>
 			</div>
 		</nav>
-	</header>
 
 	<section>
 		<div>
