--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
+						<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
+						<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
+                        <a class="dropdown-item" href="weston.html">Weston Woods</a>
+                        <a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
 					</div>
 				</li>
 			</ul>
@@ -95,7 +97,7 @@
 
 
 	<section class="slide">
-    <br>
+		<br>
 		<h2 class="w3-center">Home Gallery</h2>
 		<br>
 		<div>
@@ -143,9 +145,9 @@
 			</div>
 		</div>
 		<br>
-<div class="w3-center">
-  <button class="w3-button" onclick="plusDivs(-1)">&#10094; Prev</button>
-  <button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
+		<div class="w3-center">
+			<button class="w3-button" onclick="plusDivs(-1)">&#10094; Prev</button>
+			<button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
 	</section>
 
 	<!--Map section-->
@@ -159,6 +161,13 @@
 	<!--Footer section-->
 
 	<footer>
+		<div>
+			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+			<h5 href="index.html">Somerset Trails</h5>
+		</div>
+		<div><h5>Social Media</h5></div>
+        <link></link>
+        <link></link>
 	</footer>
 
 	<!--Scripts-->
