--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -25,54 +25,60 @@
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed top">
+    	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 
-			<!--logo part of menu bar, for better site layout-->
+		<!--logo part of menu bar, for better site layout-->
 
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-			<a class="navbar-brand" href="#"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand" href="#"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
+    </button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
+				</li>
 
-						<!--homepage tab, for user accessibility-->
+				<!--Dropdown tab, all trails in one place for user accessibility-->
 
-						<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
-					</li>
-
-					<!--Dropdown tab, all trails in one place for user accessibility-->
-
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Top Trails
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Top Trails
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-                        <a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
+						<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
 						<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
                         <a class="dropdown-item" href="weston.html">Weston Woods</a>
                         <a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</nav>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
 
-	<section>
-		<div>
-			<h2>Cheddar Gorge Gallery</h2>
-            	<section class="slide">
+<section class="cheddar-banner">
+		<div id="banner-outer">
+			<div class="container">
+				<h6><strong>Explore the best trails one step at a time</strong></h6>
+			</div>
+		</div>
+	</section>
+
+	<!--Slideshow section -->
+
+
+	<section class="slide">
 		<br>
 		<h2 class="w3-center">Cheddar Gorge Gallery</h2>
 		<br>
 		<div>
 			<div class="w3-content w3-display-container">
-				<img class="card" src="" alt="Cheddar Gorge">
+				<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Blagdonlake2.jpg" alt="Blagdon Lake">
 				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Blagdon Lake
 				</div>
 			</div>
 		</div>
@@ -88,24 +94,27 @@
 
 		<div>
 			<div class="w3-content w3-display-container">
-				<img class="card" src="" alt="Cheddar Gorge">
+				<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/f/fc/View_from_Cleeve_Hill_-_geograph.org.uk_-_299073.jpg" alt="Cleeve Hill">
 				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Cleeve Hill
 				</div>
 			</div>
 		</div>
 
 		<div>
 			<div class="w3-content w3-display-container">
-				<img class="card" src="" alt="">
+				<img class="card" src="https://s0.geograph.org.uk/geophotos/05/45/08/5450898_08a5436b.jpg" alt="West Somerset Coastal Path">
 				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					West Somerset Coastal Path
 				</div>
 			</div>
 		</div>
 
 		<div>
 			<div class="w3-content w3-display-container">
-				<img class="card" src="" alt="Cheddar Gorge">
+				<img class="card" src="https://live.staticflickr.com/5828/20565424828_7f416be21d_b.jpg" alt="Weston Woods">
 				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Weston Woods
 				</div>
 			</div>
 		</div>
@@ -113,11 +122,9 @@
 		<div class="w3-center">
 			<button class="w3-button" onclick="plusDivs(-1)">&#10094; Prev</button>
 			<button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
-		</div>
 	</section>
 
-
-	<!--<section class="cheddar-map">
+			<!--<section class="cheddar-map">
     <div
 		<h2><strong>Cheddar gorge street view</strong></h2>
 		<iframe src="https://www.google.com/maps/embed/v1/streetview" key="AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8"
@@ -125,41 +132,41 @@
     </div>
 	</section>-->
 
-	<footer>
-		<div>
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-			<h5 href="index.html">Somerset Trails</h5>
-		</div>
-		<div>
-			<h5>Social Media</h5>
-		</div>
-		<link>
-		</link>
-		<link>
-		</link>
-	</footer>
+			<footer>
+				<div>
+					<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
+					<h5 href="index.html">Somerset Trails</h5>
+				</div>
+				<div>
+					<h5>Social Media</h5>
+				</div>
+				<link>
+				</link>
+				<link>
+				</link>
+			</footer>
 
-	<script>
-	</script>
+			<script>
+			</script>
 
-	<!--Scripts-->
+			<!--Scripts-->
 
-	<!--Jquery-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+			<!--Jquery-->
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-	<!--Popper-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+			<!--Popper-->
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-	<!--Bootstrap library-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+			<!--Bootstrap library-->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-	<!--Maps JS-->
-	<script src="assets/js/maps.js"></script>
+			<!--Maps JS-->
+			<script src="assets/js/maps.js"></script>
 
-	<!--Google maps scripts-->
-	<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
-	</script>
+			<!--Google maps scripts-->
+			<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=........&callback=initMap">
+			</script>
 
 </body>
 
