--- a/weston.html
+++ b/weston.html
@@ -25,99 +25,104 @@
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed top">
+    	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
 
-			<!--logo part of menu bar, for better site layout-->
+		<!--logo part of menu bar, for better site layout-->
 
-			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-			<a class="navbar-brand" href="#"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand" href="#"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
+    </button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
+				</li>
 
-						<!--homepage tab, for user accessibility-->
+				<!--Dropdown tab, all trails in one place for user accessibility-->
 
-						<a class="nav-link" href="index.html">Somerset Trails<span class="sr-only">(current)</span></a>
-					</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Top Trails
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
+						<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
+						<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
+                        <a class="dropdown-item" href="weston.html">Weston Woods</a>
+                        <a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
 
-					<!--Dropdown tab, all trails in one place for user accessibility-->
-
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Top Trails
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="cheddar-gorge.html">Cheddar Gorge</a>
-							<a class="dropdown-item" href="cleeve-hill.html">Cleeve Hill</a>
-							<a class="dropdown-item" href="somerset-coastal.html">Somerset Coastal Path</a>
-							<a class="dropdown-item" href="weston.html">Weston Woods</a>
-							<a class="dropdown-item" href="blagdon.html">Blagdon Lake</a>
-						</div>
-					</li>
-				</ul>
+<section class="weston-banner">
+		<div id="banner-outer">
+			<div class="container">
+				<h6><strong>Explore the best trails one step at a time</strong></h6>
 			</div>
-		</nav>
-	</header>
+		</div>
+	</section>
 
-	<section>
+	<!--Slideshow section -->
+
+
+	<section class="slide">
+		<br>
+		<h2 class="w3-center">Weston Woods Gallery</h2>
+		<br>
 		<div>
-			<h2>Cheddar Gorge Gallery</h2>
-			<section class="slide">
-				<br>
-				<h2 class="w3-center">Cheddar Gorge Gallery</h2>
-				<br>
-				<div>
-					<div class="w3-content w3-display-container">
-						<img class="card" src="" alt="Cheddar Gorge">
-						<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
-						</div>
-					</div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Blagdonlake2.jpg" alt="Blagdon Lake">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Blagdon Lake
 				</div>
+			</div>
+		</div>
 
-				<div>
-					<div class="w3-content w3-display-container">
-						<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Cheddar_Gorge%2C_Somerset%2C_UK_-_Diliff.jpg" alt="Cheddar Gorge">
-						<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
-							Cheddar Gorge
-						</div>
-					</div>
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Cheddar_Gorge%2C_Somerset%2C_UK_-_Diliff.jpg" alt="Cheddar Gorge">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Cheddar Gorge
 				</div>
+			</div>
+		</div>
 
-				<div>
-					<div class="w3-content w3-display-container">
-						<img class="card" src="" alt="Cheddar Gorge">
-						<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
-						</div>
-					</div>
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="https://upload.wikimedia.org/wikipedia/commons/f/fc/View_from_Cleeve_Hill_-_geograph.org.uk_-_299073.jpg" alt="Cleeve Hill">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Cleeve Hill
 				</div>
+			</div>
+		</div>
 
-				<div>
-					<div class="w3-content w3-display-container">
-						<img class="card" src="" alt="">
-						<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
-						</div>
-					</div>
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="https://s0.geograph.org.uk/geophotos/05/45/08/5450898_08a5436b.jpg" alt="West Somerset Coastal Path">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					West Somerset Coastal Path
 				</div>
+			</div>
+		</div>
 
-				<div>
-					<div class="w3-content w3-display-container">
-						<img class="card" src="" alt="Cheddar Gorge">
-						<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
-						</div>
-					</div>
+		<div>
+			<div class="w3-content w3-display-container">
+				<img class="card" src="https://live.staticflickr.com/5828/20565424828_7f416be21d_b.jpg" alt="Weston Woods">
+				<div class="w3-display-bottomleft w3-container w3-padding-10 w3-white">
+					Weston Woods
 				</div>
-				<br>
-				<div class="w3-center">
-					<button class="w3-button" onclick="plusDivs(-1)">&#10094; Prev</button>
-					<button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
-				</div>
-			</section>
-
+			</div>
+		</div>
+		<br>
+		<div class="w3-center">
+			<button class="w3-button" onclick="plusDivs(-1)">&#10094; Prev</button>
+			<button class="w3-button" onclick="plusDivs(1)">Next &#10095;</button>
+	</section>
 
 			<!--<section class="cheddar-map">
     <div
