Edit banner styling

--- a/cleeve-hill.html
+++ b/cleeve-hill.html
@@ -60,7 +60,7 @@
 	</nav>
 
 <section class="cleeve-banner">
-		<div id="banner-outer">
+		<div class="banner-outer">
 			<div class="container">
 				<h6><strong>Explore the best trails one step at a time</strong></h6>
 			</div>
