--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<!--Cover text and cover picture.-->
 
 	<section class="banner">
-		<div id="banner-outer">
+		<div class="banner-outer">
 			<div class="container">
 				<h6><strong>Explore the best trails one step at a time</strong></h6>
 			</div>
