Add animation trail zoom to results page

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -59,8 +59,10 @@
 		</div>
 	</nav>
 
+<!--cover picture-->
+
 <section class="cheddar-banner">
-		<div class="banner-outer">
+		<div id="banner-outer">
 			<div class="container">
 				<h6><strong>Explore the best trails one step at a time</strong></h6>
 			</div>
