--- a/weston.html
+++ b/weston.html
@@ -11,7 +11,7 @@
 	<!--css-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
-	<title>Cheddar gorge</title>
+	<title>Weston Woods</title>
 
 	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
@@ -59,8 +59,10 @@
 		</div>
 	</nav>
 
+    <!--cover picture-->
+
 <section class="weston-banner">
-		<div class="banner-outer">
+		<div id="banner-outer">
 			<div class="container">
 				<h6><strong>Explore the best trails one step at a time</strong></h6>
 			</div>
