--- a/cleeve-hill.html
+++ b/cleeve-hill.html
@@ -59,8 +59,10 @@
 		</div>
 	</nav>
 
+    <!--cover picture-->
+
 <section class="cleeve-banner">
-		<div class="banner-outer">
+		<div id="banner-outer">
 			<div class="container">
 				<h6><strong>Explore the best trails one step at a time</strong></h6>
 			</div>
