Edit navigation bar positioning& add home icon

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--WS3 Css-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!--font awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!--font awesome-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!--bootstrap-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<!--css-->
@@ -28,7 +28,7 @@
 	<!--Navigation, fixed at the top of page for ease of use-->
 
 	<nav class="topnav" id="myTopnav">
-    <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
+		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Trails
       <i class="fa fa-caret-down"></i>
@@ -44,12 +44,11 @@
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</nav>
 
-
 	<!--cover picture-->
 
 	<section class="banner">
-		<div id="banner-outer">
-		</div>
+		<h6>home</h6>
+		<div id="banner-outer"></div>
 	</section>
 
 
@@ -80,7 +79,7 @@
 
 
 
-	<!--Map section
+	<!--Map section-->
 
 	<section class="map">
 		<h2>Somerset Map</h2>
@@ -88,16 +87,16 @@
 	</section>
 
 
-	<!--Footer section
+	<!--Footer section-->
 
 	<footer>
 		<div>
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-			<h5 href="index.html">Somerset Trails</h5>
 		</div>
-		<div>
-			<h5>Social Media</h5>
-		</div>
+			<h4>>Somerset Trails</h4>
+			<div>
+				<h5>Social Media</h5>
+			</div>
 	</footer>
 
 	<!--Scripts-->
