Edit code format& css styling of homepage navigation

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 		rel="#">
 </head>
 
-<body data-spy="scroll" data-target="#navbar-scrollspy" data-offset="0">
+<body>
 
 	<!--Navigation, fixed at the top of page for ease of use-->
 
-	<nav class="topnav" id="myTopnav">
+	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Trails
-      <i class="fa fa-caret-down"></i>
-    </button>
+ <i class="fa fa-caret-down"></i>
+ </button>
 			<div class="dropdown-content">
 				<a href="cleeve-hill.html">Cleeve Hill</a>
 				<a href="cheddar-gorge.html">Cheddar Gorge</a>
@@ -92,7 +92,7 @@
 	<footer>
 		<div>
 			<img class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths">
-		</div>
+</div>
 			<h4>>Somerset Trails</h4>
 			<div>
 				<h5>Social Media</h5>
@@ -112,9 +112,9 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 	<!--Navigation bar JS-->
-	<script src="assets/js/nav.js"></script>
+<script src="assets/js/nav.js"></script>
 
-	<!--Maps JS-->
+<!--Maps JS-->
 	<script src="assets/js/maps.js"></script>
 
 	<!--Slideshow JS-->
