Add nav.js file link to results page

--- a/weston.html
+++ b/weston.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--WS3 Css-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<!--font awesome-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!--bootstrap-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<!--css-->
@@ -23,7 +25,7 @@
 
 <body>
 
-		<!--Navigation, fixed at the top of page for ease of use.-->
+	<!--Navigation, fixed at the top of page for ease of use.-->
 
 	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
@@ -41,8 +43,8 @@
 		</div>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</nav>
-	
-    <!--cover picture-->
+
+	<!--cover picture-->
 
 	<section class="weston-banner">
 		<div id="banner-outer">
@@ -144,6 +146,9 @@
 
 	<!--Bootstrap library-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+	<!--Navigation bar JS-->
+	<script src="assets/js/nav.js"></script>
 
 	<!--Maps JS-->
 	<script src="assets/js/maps.js"></script>
