Add exmoor national park file& banner. Edit html formatting and styling.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 	<section class="banner">
 		<h6>home</h6>
-		<div id="banner-outer"></div>
+		<div class="banner-outer"></div>
 	</section>
 
 
