--- a/exmoor.html
+++ b/exmoor.html
@@ -13,7 +13,7 @@
 	<!--css-->
 	<link href="assets/css/style.css" rel="stylesheet">
 
-	<title>Cleeve Hill</title>
+	<title>Exmoor National Park</title>
 
 	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="..assets/images/favicon-32x32.png">
@@ -24,7 +24,6 @@
 </head>
 
 <body>
-
 
 	<!--Navigation, fixed at the top of page for ease of use.-->
 
@@ -47,7 +46,7 @@
 
 	<!--cover picture-->
 
-	<section class="cleeve-banner">
+	<section class="weston-banner">
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
@@ -57,7 +56,7 @@
 
 	<section class="slide">
 		<br>
-		<h2 class="w3-center">Cleeve Hill Gallery</h2>
+		<h2 class="w3-center">Weston Woods Gallery</h2>
 		<br>
 		<div>
 			<div class="w3-content w3-display-container">
