--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -38,7 +38,7 @@
 				<a href="cheddar-gorge.html">Cheddar Gorge</a>
 				<a href="blagdon.html">Blagdon Lake</a>
 				<a href="somerset-coastal.html">Somerset Coastal Path</a>
-				<a href="weston.html">Weston Woods</a>
+				<a href="exmoor.html">Exmoor National park</a>
 			</div>
 		</div>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
@@ -47,11 +47,8 @@
 	<!--cover picture-->
 
 	<section class="coastal-banner">
-		<div id="banner-outer">
-			<div class="container">
-				<h6><strong>Explore the best trails one step at a time</strong></h6>
-			</div>
-		</div>
+		<h6>Explore the best trails one step at a time</h6>
+		<div class="banner-outer"></div>
 	</section>
 
 	<!--Slideshow section -->
