update homepage menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<a href="cheddar-gorge.html">Cheddar Gorge</a>
 				<a href="blagdon.html">Blagdon Lake</a>
 				<a href="somerset-coastal.html">Somerset Coastal Path</a>
-				<a href="weston.html">Weston Woods</a>
+				<a href="exmoor.html">Exmoor National park</a>
 			</div>
 		</div>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
