Edit banner text styling

--- a/exmoor.html
+++ b/exmoor.html
@@ -46,7 +46,7 @@
 
 	<!--cover picture-->
 
-	<section class="weston-banner">
+	<section class="exmoor-banner">
 		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
