--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!--cover picture-->
 
 	<section class="banner">
-		<h6>home</h6>
+		<h6>Explore the best trails one step at a time</h6>
 		<div class="banner-outer"></div>
 	</section>
 
